Add order to order list in menu
